k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-hello-world
  name: flask-hello-world
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: flask-hello-world
